# squish-mcp

./: .gitignore  LICENSE  README.md  SQUISH-RULES.yaml  pyproject.toml  squish_mcp.py  squishrunnermcp.py
cli/: __init__.py  squishrunner_cli.py  squishserver_cli.py
context/: __init__.py  squish_context_init.py
examples/global_scripts/: example_helpers.py
examples/suites/suite_example_global_scripts/: suite.conf
examples/suites/suite_example_global_scripts/tst_use_global_helper/: test.py
examples/suites/suite_example_smoke/: suite.conf
examples/suites/suite_example_smoke/tst_second/: test.py
examples/suites/suite_example_smoke/tst_smoke/: test.py
examples/suites/suite_object_identification/: suite.conf
examples/suites/suite_object_identification/tst_interact_with_object/: test.py
examples/suites/suite_object_identification/tst_take_snapshot/: test.py
execution/: __init__.py  squish_test_execution.py
scripting/: SAMPLE-OBJECT-GENERATION-test.py  __init__.py  parse_object_snapshot.py  pom_generation.py  pom_generation_helpers.py  squish_code_analysis.py
src/squish_mcp/: errors.py
src/squish_mcp/server/: __init__.py  instructions.md
src/squish_mcp/squish/: __init__.py
src/squish_mcp/squish/analysis/: __init__.py  context_models.py  documentation.py  global_scripts.py  models.py  object_reference_analysis.py  suite_directory.py  test_suite_analysis.py
tests/squish/: conftest.py  test_analysis.py  test_cli_paths.py  test_code_generation.py  test_parse_snapshot.py  test_pom_generation.py  test_server_tools_error_paths.py
tests/squish/test_data/: __init__.py
(+46 files in other folders)
